# SurgiTrack

./: .gitignore  CMakeLists.txt  README.md
data/: calibration.yml
docs/: analysis.md  background_research.md  evaluation_results.md  submission_checklist.md
markers/: generate_instrument_markers.py  generate_markers.py
results/: plot_results.py
src/: aruco_detector.cpp  aruco_detector.hpp  collision_checker.cpp  collision_checker.hpp  instrument_detector.cpp  instrument_detector.hpp  instrument_tracker.cpp  instrument_tracker.hpp  kalman_predictor.cpp  kalman_predictor.hpp  main.cpp  or_visualizer.cpp  or_visualizer.hpp  sterile_field_monitor.cpp  sterile_field_monitor.hpp  visualizer.cpp  visualizer.hpp
test/: test_aruco_detector.cpp  test_kalman_predictor.cpp
